--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Acme-MetaSyntactic-seinfeld
 
-0.001   2016-06-05 (PERLANCAR) (unreleased)
+0.001   2016-06-05 (PERLANCAR)
 
         - First release.
