--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
-0.002   2017-02-04 (PERLANCAR)
+0.002   2017-02-04  Released-By: PERLANCAR
 
 	- No functional changes.
 
 	- [dist] Add dzil plugin DZP:Acme::MetaSyntactic.
 
 
-0.001   2016-06-05 (PERLANCAR)
+0.001   2016-06-05  Released-By: PERLANCAR
 
         - First release.
